# kurikka

./: README.md  index.html  package-lock.json  package.json
multiplayer-server/: Cargo.toml  README.md
multiplayer-server/src/: main.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  game.rs  input_hook.rs  lib.rs  multiplayer.rs
